--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "testEnvironment": "jsdom"
   },
   "scripts": {
-    "test": "exit 0",
+    "test": "Exit 0",
+    "test:watch": "npm run test -- --watch",
     "lint": "eslint --ext js --ext jsx src",
     "start": "webpack serve --hot --mode development --devtool eval-source-map --open",
     "start:watch": "npm run start",
@@ -62,8 +63,13 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.2",
     "classnames": "^2.3.1",
+    "D": "^1.0.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "node": "^18.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.3.0"
   }
 }
