--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "testEnvironment": "jsdom"
   },
   "scripts": {
-    "test": "Exit 0",
+    "test": "exit 0",
     "lint": "eslint --ext js --ext jsx src",
     "start": "webpack serve --hot --mode development --devtool eval-source-map --open",
     "start:watch": "npm run start",
