--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.2",
+    "@supabase/supabase-js": "^1.35.4",
     "classnames": "^2.3.1",
     "D": "^1.0.0",
     "node": "^18.7.0",
